--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 13:05:10 2018</p>
+         Last Run: Tue Jul 24 14:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>70</td>
                         <td>1</td>
                         <td>13</td>
@@ -42,27 +42,27 @@
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>36</td>
-                        <td>69</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>34</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>21</td>
-                        <td>75</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>20</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>38</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,8 +107,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "16",
-                 "16",
-                 "15"
+                 "15",
+                 "14"
                ]
              },
              {
@@ -118,8 +118,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "16",
-                 "16",
-                 "15"
+                 "15",
+                 "14"
                ]
              }
            ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "35",
-                 "36",
-                 "21"
+                 "34",
+                 "34",
+                 "20"
                ]
              },
              {
@@ -181,8 +181,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "70",
-                 "69",
-                 "75"
+                 "72",
+                 "77"
                ]
              },
              {
@@ -191,8 +191,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "60",
-                 "50",
-                 "38"
+                 "51",
+                 "36"
                ]
              }
            ]
@@ -204,12 +204,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 13:05:10 2018</p>
+         Last Run: Tue Jul 24 14:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -230,35 +231,35 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>15</td>
+                        <td>0</td>
                         <td>42</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>45</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>15</td>
+                        <td>0</td>
                         <td>43</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>49</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -282,11 +283,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>34</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>41</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -334,7 +335,7 @@
                "data":[
                  "21",
                  "21",
-                 "21",
+                 "20",
                  "18",
                  "16"
                ]
@@ -347,7 +348,7 @@
                "data":[
                  "21",
                  "21",
-                 "21",
+                 "20",
                  "18",
                  "16"
                ]
@@ -402,8 +403,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "15",
+                 "0",
+                 "0",
                  "15",
                  "33",
                  "34"
@@ -416,9 +417,9 @@
                "data":[
                  "42",
                  "43",
-                 "46",
+                 "47",
                  "55",
-                 "67"
+                 "66"
                ]
              },
              {
@@ -426,11 +427,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "49",
+                 "24",
+                 "28",
                  "52",
                  "35",
-                 "41"
+                 "42"
                ]
              }
            ]
@@ -447,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 13:05:10 2018</p>
+         Last Run: Tue Jul 24 14:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,10 +473,10 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>8</td>
                      </tr>
                      <tr>
@@ -486,7 +487,7 @@
                         <td>0</td>
                         <td>35</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
                         <td>11</td>
                      </tr>
@@ -498,8 +499,8 @@
                         <td>0</td>
                         <td>31</td>
                         <td>6</td>
-                        <td>8</td>
-                        <td>NNW</td>
+                        <td>10</td>
+                        <td>N</td>
                         <td>10</td>
                      </tr>
                      <tr>
@@ -508,9 +509,9 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
                         <td>10</td>
                      </tr>
@@ -520,7 +521,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>6</td>
                         <td>10</td>
                         <td>N</td>
@@ -652,11 +653,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
+                 "42",
                  "35",
                  "31",
-                 "29",
-                 "28"
+                 "30",
+                 "29"
                ]
              },
              {
