--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 14:05:09 2018</p>
+         Last Run: Tue Jul 24 15:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>34</td>
-                        <td>70</td>
+                        <td>22</td>
+                        <td>68</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NNE</td>
-                        <td>60</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>34</td>
-                        <td>72</td>
+                        <td>Partly Cloudy</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>19</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNE</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>20</td>
+                        <td>18</td>
                         <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>36</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,7 +107,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "16",
-                 "15",
+                 "16",
                  "14"
                ]
              },
@@ -118,7 +118,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "16",
-                 "15",
+                 "16",
                  "14"
                ]
              }
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
-                 "34",
-                 "20"
+                 "22",
+                 "19",
+                 "18"
                ]
              },
              {
@@ -180,8 +180,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "68",
                  "70",
-                 "72",
                  "77"
                ]
              },
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "51",
-                 "36"
+                 "54",
+                 "50",
+                 "38"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 14:05:09 2018</p>
+         Last Run: Tue Jul 24 15:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -235,11 +235,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>24</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -247,11 +247,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>28</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -259,7 +259,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -271,7 +271,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>33</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -282,12 +282,12 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>34</td>
-                        <td>66</td>
+                        <td>35</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>42</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -407,7 +407,7 @@
                  "0",
                  "15",
                  "33",
-                 "34"
+                 "35"
                ]
              },
              {
@@ -415,11 +415,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
                  "43",
-                 "47",
-                 "55",
-                 "66"
+                 "44",
+                 "48",
+                 "56",
+                 "68"
                ]
              },
              {
@@ -427,11 +427,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "28",
+                 "27",
+                 "26",
                  "52",
                  "35",
-                 "42"
+                 "50"
                ]
              }
            ]
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 14:05:09 2018</p>
+         Last Run: Tue Jul 24 15:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -473,7 +473,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>4</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -485,7 +485,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>37</td>
                         <td>5</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -497,10 +497,10 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>33</td>
                         <td>6</td>
-                        <td>10</td>
-                        <td>N</td>
+                        <td>8</td>
+                        <td>NNW</td>
                         <td>10</td>
                      </tr>
                      <tr>
@@ -509,9 +509,9 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>N</td>
                         <td>10</td>
                      </tr>
@@ -521,7 +521,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>10</td>
                         <td>N</td>
@@ -653,11 +653,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "35",
+                 "43",
+                 "37",
+                 "33",
                  "31",
-                 "30",
-                 "29"
+                 "30"
                ]
              },
              {
