--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 15:05:18 2018</p>
+         Last Run: Tue Jul 24 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>22</td>
-                        <td>68</td>
+                        <td>17</td>
+                        <td>73</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NNE</td>
-                        <td>54</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>19</td>
-                        <td>70</td>
+                        <td>15</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>50</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>18</td>
-                        <td>77</td>
+                        <td>17</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>38</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "22",
-                 "19",
-                 "18"
+                 "17",
+                 "15",
+                 "17"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "70",
-                 "77"
+                 "73",
+                 "69",
+                 "76"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "50",
-                 "38"
+                 "59",
+                 "52",
+                 "40"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 15:05:18 2018</p>
+         Last Run: Tue Jul 24 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -235,11 +235,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>27</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -247,11 +247,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>26</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -259,31 +259,31 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>33</td>
-                        <td>56</td>
+                        <td>35</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>35</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>35</td>
-                        <td>68</td>
+                        <td>36</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -406,8 +406,8 @@
                  "0",
                  "0",
                  "15",
-                 "33",
-                 "35"
+                 "35",
+                 "36"
                ]
              },
              {
@@ -415,11 +415,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "42",
                  "43",
-                 "44",
-                 "48",
-                 "56",
-                 "68"
+                 "47",
+                 "55",
+                 "67"
                ]
              },
              {
@@ -427,10 +427,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "26",
-                 "52",
-                 "35",
+                 "28",
+                 "29",
+                 "55",
+                 "50",
                  "50"
                ]
              }
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 15:05:18 2018</p>
+         Last Run: Tue Jul 24 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -470,14 +470,14 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>0</td>
-                        <td>43</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>6</td>
+                        <td>45</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>8</td>
+                        <td>NW</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -485,11 +485,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>5</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>11</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -501,19 +501,19 @@
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>10</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
                         <td>31</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>N</td>
-                        <td>10</td>
+                        <td>NNE</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -571,10 +571,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "21",
                  "23",
                  "24",
-                 "25",
+                 "24",
                  "25"
                ]
              },
@@ -584,10 +584,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "21",
                  "23",
                  "24",
-                 "25",
+                 "24",
                  "25"
                ]
              }
@@ -641,7 +641,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
+                 "6",
                  "0",
                  "0",
                  "0",
@@ -653,8 +653,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "37",
+                 "45",
+                 "38",
                  "33",
                  "31",
                  "30"
@@ -665,10 +665,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
+                 "13",
+                 "18",
+                 "16",
                  "11",
-                 "10",
-                 "10",
                  "9"
                ]
              }
